# final_challenge

./: .buildinfo  .gitignore  alan.html  genindex.html  homography.html  index.html  internal.html  notes.md  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/actions/setup/: action.yml
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/final_challenge/: homography.html
_modules/final_challenge/alan/: rosbag.html  sam2_video_predictor_example.html  segmentation.html  utils.html
_sources/: alan.rst.txt  homography.rst.txt  index.rst.txt  internal.rst.txt
docs/source/: conf.py  index.rst
final_challenge/: .envrc  .gitignore  homography.py  homography_transformer_finalchallenge.py  pyproject.toml
final_challenge/.github/actions/run_venv/: action.yml
final_challenge/.github/actions/setup/: action.yml
final_challenge/alan/: __init__.py  cached_controller_data.pkl  color_filter.npy  colors.py  controller.py  detect_lines_sweep.py  image.py  plot_node.py  ros.py  rosbag.py  sam2_video_predictor_example.py  segmentation.py  tracker.py  tracker_node.py  utils.py
final_challenge/docs/source/: conf.py
final_challenge/final_challenge/alan/: utils.py
final_challenge/paul/: line_detect_node.py  line_finder.py  pure_pursuit.py
final_challenge/shrink/model/: detection_node.py  detector.py  detector_redtrafficlight.py  detector_trafficlight.py
final_challenge/shrinkray_heist/: package.xml  setup.cfg  setup.py
final_challenge/shrinkray_heist/launch/debug/: follow_trajectory.launch.xml  load_trajectory.launch.xml
final_challenge/shrinkray_heist/launch/real/: real.launch.xml
final_challenge/shrinkray_heist/launch/sim/: pf_sim_plan_follow.launch.xml
final_challenge/shrinkray_heist/shrinkray_heist/: homography_transformer.py  states.py  trajectory_follower.py  utils.py
scripts/: controller_compute.py  eval_pure_pursuit.py  johnson_track_rosbag_annotate.py  johnson_track_rosbag_annotate_v2.py  record_rosbag.sh  record_rosbags.sh  run_plot.py  run_real.py  run_rosbags.py  segmentation_test.py  warp.py  wrap.py
shrink/: states.py
shrink/model/: detection_node.py  detector_trafficlight.py
shrinkray_heist/: package.xml  setup.py
shrinkray_heist/config/real/: config.yaml
shrinkray_heist/config/sim/: sim_config.yaml
shrinkray_heist/launch/real/: real.launch.xml
shrinkray_heist/launch/sim/: sim_plan.launch.xml  sim_plan_follow.launch.xml
shrinkray_heist/shrinkray_heist/: a_star.py  basement_point_publisher.py  definitions.py  eval_utils.py  helper.py  homography_transformer.py  states.py  trajectory_follower.py  trajectory_planner.py  utils.py
shrinkray_heist/shrinkray_heist/model/: detection_node.py  detector.py  detector_node.py  detector_trafficlight.py  null_detection_node.py  shrinkray_detector.py
tests/: test_homography.py
